Refactor: 3-0. 이벤트 페이지 리펙토링