@@ -20,6 +20,7 @@ import org.springframework.stereotype.Service;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -61,36 +62,26 @@ public class AggregationFacade {
     public EventInfoDto showEventPage(User tmpUser, Long eventId) {
         User user = userService.findUser(tmpUser.getId());
         Event event = eventService.findEvent(eventId);
-        if(event.getUsers().stream().noneMatch(existingUser -> existingUser.equals(user))){
+
+        // 이벤트에 사용자 등록 여부 확인 및 등록
+        if (event.getUsers().stream().noneMatch(existingUser -> existingUser.equals(user))) {
             eventService.addUser(user, event);
             userService.addEvent(user, event);
         }
 
-        List<String> profilImgeUrlList = event.getUsers().stream().map(User::getProfileUrl).toList();
+        List<String> profileImageUrlList = event.getUsers().stream()
+                .map(User::getProfileUrl)
+                .collect(Collectors.toList());
+
         boolean isRoomMaker = user.equals(event.getRoomMaker());
 
         List<UserInfoDto> userInfoList = event.getUsers().stream()
-                .map(eventUser -> {
-                    List<EventPhoto> eventPhotoList = eventPhotoService.findUserEventPhotoList(eventUser, event);
-                    List<String> evnetPhotoUrlList = eventPhotoList.stream().map(EventPhoto::getUrl).toList();
-
-
-                    if (evnetPhotoUrlList.isEmpty()) {
-                        return null;
-                    }
-
-                    return UserInfoDto.builder()
-                            .userId(eventUser.getId().toString())
-                            .nickname(eventUser.getNickname())
-                            .imageUrlList(evnetPhotoUrlList)
-                            .checkStatus(eventUser.getCheckStatus())
-                            .imageCount(evnetPhotoUrlList.size())
-                            .build();
-                })
-                .toList();
+                .map(eventUser -> createUserInfoDto(eventUser, event))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
 
         return EventInfoDto.builder()
-                .profileImgUrlList(profilImgeUrlList)
+                .profileImgUrlList(profileImageUrlList)
                 .isRoomMaker(isRoomMaker)
                 .eventName(event.getTitle())
                 .startDate(event.getStartDate())
@@ -98,6 +89,26 @@ public class AggregationFacade {
                 .userInfo(userInfoList)
                 .build();
     }
+
+    private UserInfoDto createUserInfoDto(User eventUser, Event event) {
+        List<EventPhoto> eventPhotoList = eventPhotoService.findUserEventPhotoList(eventUser, event);
+        List<String> eventPhotoUrlList = eventPhotoList.stream()
+                .map(EventPhoto::getUrl)
+                .collect(Collectors.toList());
+
+        if (eventPhotoUrlList.isEmpty()) {
+            return null;
+        }
+
+        return UserInfoDto.builder()
+                .userId(eventUser.getId().toString())
+                .nickname(eventUser.getNickname())
+                .imageUrlList(eventPhotoUrlList)
+                .checkStatus(eventUser.getCheckStatus())
+                .imageCount(eventPhotoUrlList.size())
+                .build();
+    }
+
 
 
     //updateEventName
